<resources>
    <string name="app_name" translatable="false">Dice_roller</string>
    <string name="roll_label" translatable="false">Roll</string>
    <string name="count" translatable="false">count</string>
    <string name="result1" translatable="false">RESULT1</string>
    <string name="result2" translatable="false">RESULT2</string>
    <string name="todo">TODO</string>
    <string name="reset">RESET</string>
    <string name="total">TOTAL</string>
    <string name="_2">참가자2 : 윤혜린</string>
    <string name="_1">참가자1 : 윤혜린</string>
    <string name="__2">참가자2 : 정성균</string>

</resources>