<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/p1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/P1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/_1"
        android:textColor="#070000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_weight="0"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/dice_1" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/result1"
        style="@style/result" />

    <TextView
        android:id="@+id/P2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:background="@android:color/holo_red_light"
        android:text="@string/__2"
        android:textColor="#F1F1F1"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_weight="0"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/dice_1" />

    <TextView
        android:id="@+id/result_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/result2"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset"
        app:backgroundTint="@android:color/holo_blue_bright" />

    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll_label"
        app:backgroundTint="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/countup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/count"
        app:backgroundTint="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/total_dice"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:layout_weight="0"
        android:text="@string/total"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="TOTAL : 00"
        android:textStyle="bold|italic" />


</LinearLayout>